[package]
name = "moecon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.11", features = ["js"] }
rand = "0.8.5"
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
